# raytracing

./: .clang-tidy  CMakeLists.txt  README.md  build.sh
src/: camera.hpp  hittable.hpp  interface.hpp  main.cpp  random.hpp  ray.hpp  sphere.hpp  util.hpp  vec3.hpp  world.hpp
